--- a/.github/workflows/export.yaml
+++ b/.github/workflows/export.yaml
@@ -51,5 +51,5 @@ jobs:
         with:
           upload_url: ${{ needs.once.outputs.upload_url }}
           asset_path: release/${{ matrix.framework }}.json
-          asset_name: release-${{ matrix.framework }}
+          asset_name: ${{ matrix.framework }}
           asset_content_type: application/octet-stream
