add id to controls

--- a/controls/Applicationscredentialsinconfigurationfiles.json
+++ b/controls/Applicationscredentialsinconfigurationfiles.json
@@ -1,11 +1,17 @@
 {
     "name": "Applications credentials in configuration files",
     "attributes": {
-      "armoBuiltin": true,
-      "microsoftMitreColumns": ["Credential access","Lateral Movement"]
+        "armoBuiltin": true,
+        "microsoftMitreColumns": [
+            "Credential access",
+            "Lateral Movement"
+        ]
     },
     "description": "Attackers who have access to configuration files can steal the stored secrets and use them. Checks if ConfigMaps or pods have sensitive information in configuration.",
     "remediation": "Use Kubernetes secrets to store credentials. Use ARMO secret protection solution to improve your security even more.",
-    "rulesNames": ["rule-credentials-in-env-var", "rule-credentials-configmap"
-    ]
-  }
+    "rulesNames": [
+        "rule-credentials-in-env-var",
+        "rule-credentials-configmap"
+    ],
+    "id": "c_0012"
+}
