add scripts folder

--- a/.github/workflows/export.yaml
+++ b/.github/workflows/export.yaml
@@ -41,7 +41,7 @@ jobs:
           python-version: 3.8 #install the python needed
       - name: execute py script # run the run.py to get the latest data
         run: |
-          python export.py
+          python ./scripts/export.py
 
       - name: Upload Release Asset
         id: upload-release-asset
