--- a/controls/Applicationscredentialsinconfigurationfiles.json
+++ b/controls/Applicationscredentialsinconfigurationfiles.json
@@ -7,8 +7,8 @@
             "Lateral Movement"
         ]
     },
-    "description": "Attackers who have access to configuration files can steal the stored secrets and use them. Checks if ConfigMaps or pods have sensitive information in configuration.",
-    "remediation": "Use Kubernetes secrets to store credentials. Use ARMO secret protection solution to improve your security even more.",
+    "description": "Attackers who have access to configuration files can steal the stored secrets and use them. This control checks if ConfigMaps or pods have sensitive information in configuration.",
+    "remediation": "Use Kubernetes secrets to store credentials.",
     "rulesNames": [
         "rule-credentials-in-env-var",
         "rule-credentials-configmap"
