added mitre framework

--- a/.github/workflows/export.yaml
+++ b/.github/workflows/export.yaml
@@ -30,7 +30,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        framework: [ nsa ]
+        framework: [ nsa , mitre ]
     steps:
       - uses: actions/checkout@v2
         name: checkout repo content
