Description and remediation text changes

--- a/controls/automaticmappingserviceaccount.json
+++ b/controls/automaticmappingserviceaccount.json
@@ -4,7 +4,7 @@
         "armoBuiltin": true
     },
     "description": "Potential attacker may gain access to a POD and steal its service account token. Therefore, it is recommended to disable automatic mapping of the service account tokens in service account configuration and enable it only for PODs that need to use them.",
-    "remediation": "Only map token to PODs that are really using them. We suggest disabling the automatic mounting of service account tokens to PODs at the service account level, by specifying the automountServiceAccountToken: field to false.",
+    "remediation": "Disable automatic mounting of service account tokens to PODs either at the service account level or at the individual POD level, by specifying the automountServiceAccountToken: false. Note that POD level takes precedence.",
     "rulesNames": [
         "automount-service-account"
     ],
