--- a/controls/configuredlivenessprobe.json
+++ b/controls/configuredlivenessprobe.json
@@ -3,8 +3,8 @@
     "attributes": {
         "armoBuiltin": true
     },
-    "description": "Liveness probe is not configured.",
-    "remediation": "Ensure Liveness probe is configured",
+    "description": "Liveness probe is not configured. It is necessary to restart stuck PODs.",
+    "remediation": "Ensure Liveness probe is configured.",
     "rulesNames": [
         "configured-liveness-probe"
     ],
