--- a/controls/Applicationscredentialsinconfigurationfiles.json
+++ b/controls/Applicationscredentialsinconfigurationfiles.json
@@ -7,8 +7,8 @@
             "Lateral Movement"
         ]
     },
-    "description": "Attackers who have access to configuration files can steal the stored secrets and use them. This control checks if ConfigMaps or pods have sensitive information in configuration.",
-    "remediation": "Use Kubernetes secrets to store credentials.",
+    "description": "Attackers who have access to configuration files can steal the stored secrets and use them. This control checks if ConfigMaps or pod specifications have sensitive information in configuration.",
+    "remediation": "Use Kubernetes secrets or Key Management Systems to store credentials.",
     "rulesNames": [
         "rule-credentials-in-env-var",
         "rule-credentials-configmap"
