--- a/controls/configuredreadinessprobe.json
+++ b/controls/configuredreadinessprobe.json
@@ -3,7 +3,7 @@
     "attributes": {
         "armoBuiltin": true
     },
-    "description": "Readiness probe is not configured.",
+    "description": "Readiness probe is not configured. It is necessary to control network traffic to the POD.",
     "remediation": "Ensure Readiness probe is configured.",
     "rulesNames": [
         "configured-readiness-probe"
