Adding texts from the design document

--- a/controls/automaticmappingserviceaccount.json
+++ b/controls/automaticmappingserviceaccount.json
@@ -8,5 +8,7 @@
     "rulesNames": [
         "automount-service-account"
     ],
-    "id": "C-0034"
+    "id": "C-0034",
+    "long_description": "We have it in Armo best (Automatic mapping of service account token).",
+    "test": ""
 }
