--- a/controls/Applicationscredentialsinconfigurationfiles.json
+++ b/controls/Applicationscredentialsinconfigurationfiles.json
@@ -13,5 +13,7 @@
         "rule-credentials-in-env-var",
         "rule-credentials-configmap"
     ],
-    "id": "C-0012"
+    "id": "C-0012",
+    "long_description": "Developers store secrets in the Kubernetes configuration files, such as environment variables in the pod configuration. Such behavior is commonly seen in clusters that are monitored by Azure Security Center. Attackers who have access to those configurations, by querying the API server or by accessing those files on the developer\u2019s endpoint, can steal the stored secrets and use them.",
+    "test": "Check if the pod has sensitive information in environment variables, by using list of known sensitive key names. Check if there are configmaps with sensitive information."
 }
