--- a/.github/workflows/update-docs.yaml
+++ b/.github/workflows/update-docs.yaml
@@ -1,4 +1,4 @@
-name: export
+name: Updating documentation
 
 on:
   push:
@@ -19,6 +19,12 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.8 
+
+      - name: install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip requests
+
         
       - name: execute upload script 
         env:
