More description reviews

--- a/controls/Applicationscredentialsinconfigurationfiles.json
+++ b/controls/Applicationscredentialsinconfigurationfiles.json
@@ -7,7 +7,7 @@
             "Lateral Movement"
         ]
     },
-    "description": "Attackers who have access to configuration files can steal the stored secrets and use them. This control checks if ConfigMaps or pod specifications have sensitive information in configuration.",
+    "description": "Attackers who have access to configuration files can steal the stored secrets and use them. This control checks if ConfigMaps or pod specifications have sensitive information in their configuration.",
     "remediation": "Use Kubernetes secrets or Key Management Systems to store credentials.",
     "rulesNames": [
         "rule-credentials-in-env-var",
