add controlID field

--- a/controls/automaticmappingserviceaccount.json
+++ b/controls/automaticmappingserviceaccount.json
@@ -10,5 +10,6 @@
     ],
     "id": "C-0034",
     "long_description": "We have it in Armo best (Automatic mapping of service account token).",
-    "test": ""
+    "test": "",
+    "controlID": "C-0034"
 }
