--- a/.github/workflows/update-csvs.yaml
+++ b/.github/workflows/update-csvs.yaml
@@ -20,6 +20,8 @@ jobs:
       run: git add .
     - name: commit changed files
       run: git commit -m "Auto updating csv files"
+      env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: push code to dev
       run: git push origin HEAD:dev
       env:
