--- a/.github/workflows/update-csvs.yaml
+++ b/.github/workflows/update-csvs.yaml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   once:
-    name: Create release
+    name: Auto update csv files
     runs-on: ubuntu-latest
 
     steps:
@@ -19,7 +19,9 @@ jobs:
     - name: stage changed files
       run: git add .
     - name: commit changed files
-      run: git commit -m "Auto updating csv files"
+      run: git config --global user.email "actions@github.com"
+           git config --global user.name "GitHub Actions"
+           git commit -m "Auto updating csv files"
       env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     - name: push code to dev
