--- a/.github/workflows/update-csvs.yaml
+++ b/.github/workflows/update-csvs.yaml
@@ -18,13 +18,7 @@ jobs:
       run: python ./scripts/update-csv-files.py
     - name: stage changed files
       run: git add .
-    - name: commit changed files
-      run: git config --global user.email "actions@github.com"
-           git config --global user.name "GitHub Actions"
-           git commit -m "Auto updating csv files"
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    - name: push code to dev
-      run: git push origin HEAD:dev
-      env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - name: Commit & Push changes
+      uses: Andro999b/push@v1.3
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
