--- a/.github/workflows/update-csvs.yaml
+++ b/.github/workflows/update-csvs.yaml
@@ -2,9 +2,9 @@ name: update-csvs
 
 on:
   push:
-    branches: [ dev ]
+    branches: [ dev , master]
   pull_request:
-    branches: [ dev ]
+    branches: [ dev, master ]
     types: [ closed ]
 
 jobs:
