Revert "Update update-csvs.yaml"
This reverts commit 1c802bddb76d93e7dd8318ead40db9b8055cb69f.

--- a/.github/workflows/update-csvs.yaml
+++ b/.github/workflows/update-csvs.yaml
@@ -2,9 +2,9 @@ name: update-csvs
 
 on:
   push:
-    branches: [ dev , master]
+    branches: [ dev ]
   pull_request:
-    branches: [ dev, master ]
+    branches: [ dev ]
     types: [ closed ]
 
 jobs:
