--- a/controls/automaticmappingserviceaccount.json
+++ b/controls/automaticmappingserviceaccount.json
@@ -11,5 +11,6 @@
     "id": "C-0034",
     "long_description": "We have it in Armo best (Automatic mapping of service account token).",
     "test": "",
-    "controlID": "C-0034"
+    "controlID": "C-0034",
+    "baseScore": 5.0
 }
