adding more examples

--- a/controls/automaticmappingserviceaccount.json
+++ b/controls/automaticmappingserviceaccount.json
@@ -12,5 +12,6 @@
     "long_description": "We have it in Armo best (Automatic mapping of service account token).",
     "test": "",
     "controlID": "C-0034",
-    "baseScore": 5.0
+    "baseScore": 5.0, 
+    "example": "@controls/examples/c034.yaml"
 }
