--- a/.github/workflows/export.yaml
+++ b/.github/workflows/export.yaml
@@ -32,7 +32,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        json_file: [ nsa , mitre, armobest, frameworks, controls, rules ]
+        json_file: [ nsa , mitre, armobest, frameworks, controls, rules, default_config_inputs ]
     steps:
       - uses: actions/checkout@v2
         name: checkout repo content
