--- a/controls/configuredlivenessprobe.json
+++ b/controls/configuredlivenessprobe.json
@@ -3,11 +3,12 @@
     "attributes": {
         "armoBuiltin": true
     },
-    "description": "Liveness probe is not configured. It is necessary to restart stuck PODs.",
-    "remediation": "Ensure Liveness probe is configured.",
+    "description": "Liveness probe is intended to ensure that workload remains healthy during its entire execution lifecycle, or otherwise restrat the container. It is highly recommended to define liveness probe for every worker container. This control finds all the PODs where the Liveness probe is not configured.",
+    "remediation": "Ensure Liveness probes are configured wherever possible.",
     "rulesNames": [
         "configured-liveness-probe"
     ],
     "id": "C-0056",
+    "long_description": "Liveness probe is intended to ensure that workload remains healthy during its entire execution lifecycle, or otherwise restrat the container. It is highly recommended to define liveness probe for every worker container. This control finds all the PODs where the Liveness probe is not configured.",
     "controlID": "C-0056"
 }
