--- a/controls/configuredreadinessprobe.json
+++ b/controls/configuredreadinessprobe.json
@@ -3,12 +3,13 @@
     "attributes": {
         "armoBuiltin": true
     },
-    "description": "Readiness probe is not configured. It is necessary to control network traffic to the POD.",
-    "remediation": "Ensure Readiness probe is configured.",
+    "description": "Readiness probe is intended to ensure that workload is ready to process network traffic. It is highly recommended to define readiness probe for every worker container. This control finds all the PODs where the readiness probe is not configured.",
+    "remediation": "Ensure Readiness probes are configured wherever possible.",
     "rulesNames": [
         "configured-readiness-probe"
     ],
     "id": "C-0018",
+    "long_description": "Readiness probe is intended to ensure that workload is ready to process network traffic. It is highly recommended to define readiness probe for every worker container. This control finds all the PODs where the readiness probe is not configured.",
     "controlID": "C-0018", 
     "example": "@controls/examples/c018.yaml"
 }
