--- a/controls/configuredreadinessprobe.json
+++ b/controls/configuredreadinessprobe.json
@@ -11,5 +11,6 @@
     "id": "C-0018",
     "long_description": "Readiness probe is intended to ensure that workload is ready to process network traffic. It is highly recommended to define readiness probe for every worker container. This control finds all the PODs where the readiness probe is not configured.",
     "controlID": "C-0018", 
-    "example": "@controls/examples/c018.yaml"
+    "example": "@controls/examples/c018.yaml",
+    "baseScore": 3
 }
