--- a/controls/automaticmappingserviceaccount.json
+++ b/controls/automaticmappingserviceaccount.json
@@ -10,7 +10,7 @@
     ],
     "id": "C-0034",
     "long_description": "We have it in Armo best (Automatic mapping of service account token).",
-    "test": "",
+    "test": "Check all service accounts on which automount is not disabled.  Check all workloads on which they and their service account don't disable automount ",
     "controlID": "C-0034",
     "baseScore": 5.0, 
     "example": "@controls/examples/c034.yaml"
