--- a/rule-tests/insecure-capabilities/cronjob/input/cronjob.yaml
+++ b/rule-tests/insecure-capabilities/cronjob/input/cronjob.yaml
@@ -13,6 +13,9 @@ spec:
             -
               name : mysql
               image : mysql
+              securityContext:
+                capabilities:
+                  add: ["ALL"]
               env :
                 -
                   name : MYSQL_ROOT_PASSWORD
