--- a/.github/workflows/regotests.yaml
+++ b/.github/workflows/regotests.yaml
@@ -15,7 +15,7 @@ jobs:
           go-version: 1.17
 
       - name: Build
-        run: go build -v ./...
+        run: go build -v ./rule-tests/rego_test.go
 
       - name: Test
         run:  go test -v ./rule-tests/rego_test.go -run TestAllRules
