fix test for host pid ipc

--- a/.github/workflows/regotests.yaml
+++ b/.github/workflows/regotests.yaml
@@ -16,4 +16,5 @@ jobs:
 
 
       - name: Test
-        run:  go test -v ./rule-tests/rego_test.go -run TestAllRules
+        working-directory: ./rule-tests
+        run:  go test -v rego_test.go -run TestAllRules
