--- a/.github/workflows/regotests.yaml
+++ b/.github/workflows/regotests.yaml
@@ -9,12 +9,14 @@ jobs:
     name: Test
     runs-on: ubuntu-latest
     steps:
+
       - name: Set up Go
         uses: actions/setup-go@v2
-        with:
+        with: 
           go-version: 1.17
 
 
       - name: Test
+        uses: actions/checkout@v2
         working-directory: ./rule-tests
         run:  go test -v rego_test.go -run TestAllRules
