run tests for push in master

--- a/.github/workflows/export-dev.yaml
+++ b/.github/workflows/export-dev.yaml
@@ -3,7 +3,7 @@ name: update-csvs
 
 on:
   push:
-    branches: [ dev, rego-tests ]
+    branches: [ dev ]
   pull_request:
     branches: [ dev ]
     types: [ closed ]
