--- a/.github/workflows/export.yaml
+++ b/.github/workflows/export.yaml
@@ -14,6 +14,15 @@ jobs:
     outputs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
+      - name: Set up Go
+        uses: actions/setup-go@v2
+        with: 
+          go-version: 1.17
+
+      - name: Test Regoes
+        working-directory: ./testrunner
+        run:  go test -v rego_test.go -run TestAllRules
+        
       - name: Create a release
         id: create_release
         uses: actions/create-release@v1
