--- a/testrunner/test-single-rego/input/pod.yaml
+++ b/testrunner/test-single-rego/input/pod.yaml
@@ -1,22 +1,16 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: audit-pod
+  name: command-demo
   labels:
-    app: audit-pod
+    purpose: demonstrate-command
 spec:
+  securityContext :
+    runAsUser : 999
+    runAsGroup: 3000
   containers:
-  - name: test-container
-    env :
-      - name : azure_batch_key
-        value : "Hello from the environment"
-    image: hashicorp/http-echo:0.2.3
-    securityContext:
-      capabilities:
-        add: ["NET_ADMIN", "SYS_ADMIN"]
-      allowPrivilegeEscalation: true
-  - name : test-container2
-    env :
-        - name : random
-          value : "Hello from the environment"
-    image : hashicorp/http-echo:0.2.3
+  - name: command-demo-container
+    image: debian
+    command: ["sudo printenv"]
+    args: ["HOSTNAME", "KUBERNETES_PORT"]
+  restartPolicy: OnFailure
