--- a/.github/workflows/export.yaml
+++ b/.github/workflows/export.yaml
@@ -20,7 +20,7 @@ jobs:
           go-version: 1.17
 
       - name: Test Regoes
-        working-directory: ./testrunner
+        working-directory: testrunner
         run:  go test -v rego_test.go -run TestAllRules
         
       - name: Create a release
