--- a/.github/workflows/export.yaml
+++ b/.github/workflows/export.yaml
@@ -14,6 +14,9 @@ jobs:
     outputs:
       upload_url: ${{ steps.create_release.outputs.upload_url }}
     steps:
+      - uses: actions/checkout@v2
+        name: checkout repo content
+
       - name: Set up Go
         uses: actions/setup-go@v2
         with: 
