--- a/default-config-inputs.json
+++ b/default-config-inputs.json
@@ -102,7 +102,8 @@
                 "ca-webhook",
                 "ca-websocket",
                 "clair-clair"
-            ]
+            ],
+            "recommendedLabels": ["app", "tier", "phase", "version", "owner", "env"]
         }
     }
 }
