use configurable list k8sRecommendedLabels in rule K8s common labels usage

--- a/default-config-inputs.json
+++ b/default-config-inputs.json
@@ -103,7 +103,8 @@
                 "ca-websocket",
                 "clair-clair"
             ],
-            "recommendedLabels": ["app", "tier", "phase", "version", "owner", "env"]
+            "recommendedLabels": ["app", "tier", "phase", "version", "owner", "env"],
+            "k8sRecommendedLabels": ["app.kubernetes.io/name", "app.kubernetes.io/instance", "app.kubernetes.io/version", "app.kubernetes.io/component", "app.kubernetes.io/part-of", "app.kubernetes.io/managed-by", "app.kubernetes.io/created-by"]
         }
     }
 }
