--- a/testrunner/test-single-rego/input/rolebinding.yaml
+++ b/testrunner/test-single-rego/input/rolebinding.yaml
@@ -8,6 +8,6 @@ subjects:
   name: jane 
   apiGroup: rbac.authorization.k8s.io
 roleRef:
-  kind: ClusterRole 
-  name: test
+  kind: Role 
+  name: pod-reader 
   apiGroup: rbac.authorization.k8s.io
