--- a/rules-tests/more-than-one-replicas/statefulset/input/statefulset.yaml
+++ b/rules-tests/more-than-one-replicas/statefulset/input/statefulset.yaml
@@ -5,14 +5,14 @@ metadata:
 spec:
   selector:
     matchLabels:
-      app: nginx # has to match .spec.template.metadata.labels
+      app: nginx 
   serviceName: "nginx"
-  replicas: 1 # by default is 1
-  minReadySeconds: 10 # by default is 0
+  replicas: 1 
+  minReadySeconds: 10 
   template:
     metadata:
       labels:
-        app: nginx # has to match .spec.selector.matchLabels
+        app: nginx 
     spec:
       terminationGracePeriodSeconds: 10
       containers:
