more fix paths - tests not passing yet

--- a/rules-tests/resource-policies/pod/input/pod.yaml
+++ b/rules-tests/resource-policies/pod/input/pod.yaml
@@ -15,4 +15,7 @@ spec:
         cpu: "500m"
   - name: log-aggregator
     image: images.my-company.example/log-aggregator:v6
+    resources:
+      limits:
+        memory: "128Mi"
 
