--- a/testrunner/test-single-rego/input/rolebinding.yaml
+++ b/testrunner/test-single-rego/input/rolebinding.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         purpose: demonstrate-command
     spec :
+      serviceAccountName: kubernetes-dashboard
       containers :
         -
           name : app
