--- a/.github/workflows/export-dev.yaml
+++ b/.github/workflows/export-dev.yaml
@@ -86,7 +86,7 @@ jobs:
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           with:
-            upload_url: ${{ needs.once.outputs.upload_url }}
+            upload_url: ${{ needs.update_csv.outputs.upload_url }}
             asset_path: release/${{ matrix.json_file }}.json
             asset_name: ${{ matrix.json_file }}
             asset_content_type: application/octet-stream
@@ -115,7 +115,7 @@ jobs:
           env:
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           with:
-            upload_url: ${{ needs.once.outputs.upload_url }}
+            upload_url: ${{ needs.update_csv.outputs.upload_url }}
             asset_path: release/${{ matrix.csv-files }}.csv
             asset_name: ${{ matrix.csv-files }}
             asset_content_type: application/octet-stream
