--- a/.github/workflows/export-dev.yaml
+++ b/.github/workflows/export-dev.yaml
@@ -27,6 +27,10 @@ jobs:
 
     - name: Run a update-csv-files script
       run: python ./scripts/update-csv-files.py
+    
+    - name: Run export-dev script
+      run: python ./scripts/export-dev.py
+
 
 
     - name: stage changed files
