--- a/default-config-inputs.json
+++ b/default-config-inputs.json
@@ -1,4 +1,14 @@
 {
+    "name": "default",
+    "attributes": {
+        "armoBuiltin": true
+    },
+    "scope": {
+        "designatorType": "attributes",
+        "attributes": {}
+    },
+    "settings": {
+        "postureControlInputs": {
             "imageRepositoryAllowList": [
                 "ecr.*amazonaws.com",
                 ".*.gcr.io",
@@ -76,13 +86,14 @@
                 "kubernetes-dashboard"
             ],
             "untrustedRegistries": [],
+            "memory_request_max": [],            
             "memory_request_min": [],            
             "memory_limit_max": ["2Mi"],
             "memory_limit_min": [],
-            "cpu_request_max": ["2m"],
+            "cpu_request_max": ["500m"],
             "cpu_request_min": [],
-            "cpu_limit_min": ["2m"],
-            "cpu_limit_max": [],
+            "cpu_limit_max": ["500m"],
+            "cpu_limit_min": [],
             "wlKnownNames": [
                 "coredns",
                 "kube-proxy",
@@ -105,3 +116,5 @@
             "recommendedLabels": ["app", "tier", "phase", "version", "owner", "env"],
             "k8sRecommendedLabels": ["app.kubernetes.io/name", "app.kubernetes.io/instance", "app.kubernetes.io/version", "app.kubernetes.io/component", "app.kubernetes.io/part-of", "app.kubernetes.io/managed-by", "app.kubernetes.io/created-by"]
         }
+    }
+}
