--- a/default-config-inputs.json
+++ b/default-config-inputs.json
@@ -14,6 +14,7 @@
                 ".*.gcr.io",
                 ".*azurecr.io"
             ],
+            "insecureCapabilitiesAllowList": [],
             "insecureCapabilities": [
                 "SETPCAP",
                 "NET_ADMIN",
@@ -29,7 +30,8 @@
                 "ALL",
                 "BPF"
             ],
-            "listOfDangerousArtifcats": [
+            "listOfDangerousArtifactsAllowList": [],
+            "listOfDangerousArtifacts": [
                 "bin/bash",
                 "sbin/sh",
                 "bin/ksh",
@@ -40,10 +42,13 @@
                 "bin/busybox",
                 "usr/bin/busybox"
             ],
+            "publicRegistriesAllowlist": [],
             "publicRegistries": [
                 "quay.io",
-                "registry.hub.docker.com"
+                "registry.hub.docker.com",
+                "gcr.io"
             ],
+            "sensitiveInterfacesAllowlist": [],
             "sensitiveInterfaces": [
                 "nifi",
                 "argo-server",
@@ -53,6 +58,7 @@
             ],
             "max_critical_vulnerabilities": ["5"],
             "max_high_vulnerabilities": ["10"],
+            "sensitiveKeyNamesAllowlist": [],
             "sensitiveKeyNames": [
                 "aws_access_key_id",
                 "aws_secret_access_key",
@@ -69,6 +75,7 @@
                 "bearer",
                 "credential"
             ],
+            "sensitiveValuesAllowlist": [],
             "sensitiveValues": [
                 "BEGIN \\w+ PRIVATE KEY",
                 "PRIVATE KEY",
@@ -85,14 +92,15 @@
                 "weave-scope-app",
                 "kubernetes-dashboard"
             ],
+            "untrustedRegistriesAllowlist": [],
             "untrustedRegistries": [],
-            "memory_request_max": [],            
-            "memory_request_min": [],            
-            "memory_limit_max": ["2Mi"],
+            "memory_request_max": [],
+            "memory_request_min": [],
+            "memory_limit_max": [],
             "memory_limit_min": [],
-            "cpu_request_max": ["500m"],
+            "cpu_request_max": [],
             "cpu_request_min": [],
-            "cpu_limit_max": ["500m"],
+            "cpu_limit_max": [],
             "cpu_limit_min": [],
             "wlKnownNames": [
                 "coredns",
