--- a/default-config-inputs.json
+++ b/default-config-inputs.json
@@ -74,7 +74,9 @@
                 "PRIVATE KEY",
                 "eyJhbGciO",
                 "JWT",
-                "Bearer"
+                "Bearer",
+                "_key_",
+                "_secret_"
             ],
             "servicesNames": [
                 "nifi-service",
