Revert "support allowlist"
This reverts commit 165df148897ffad3d7c000bf01063109aef69eb6.

--- a/default-config-inputs.json
+++ b/default-config-inputs.json
@@ -14,7 +14,6 @@
                 ".*.gcr.io",
                 ".*azurecr.io"
             ],
-            "insecureCapabilitiesAllowList": [],
             "insecureCapabilities": [
                 "SETPCAP",
                 "NET_ADMIN",
@@ -30,8 +29,7 @@
                 "ALL",
                 "BPF"
             ],
-            "listOfDangerousArtifactsAllowList": [],
-            "listOfDangerousArtifacts": [
+            "listOfDangerousArtifcats": [
                 "bin/bash",
                 "sbin/sh",
                 "bin/ksh",
@@ -42,13 +40,10 @@
                 "bin/busybox",
                 "usr/bin/busybox"
             ],
-            "publicRegistriesAllowlist": [],
             "publicRegistries": [
                 "quay.io",
-                "registry.hub.docker.com",
-                "gcr.io"
+                "registry.hub.docker.com"
             ],
-            "sensitiveInterfacesAllowlist": [],
             "sensitiveInterfaces": [
                 "nifi",
                 "argo-server",
@@ -58,7 +53,6 @@
             ],
             "max_critical_vulnerabilities": ["5"],
             "max_high_vulnerabilities": ["10"],
-            "sensitiveKeyNamesAllowlist": [],
             "sensitiveKeyNames": [
                 "aws_access_key_id",
                 "aws_secret_access_key",
@@ -75,7 +69,6 @@
                 "bearer",
                 "credential"
             ],
-            "sensitiveValuesAllowlist": [],
             "sensitiveValues": [
                 "BEGIN \\w+ PRIVATE KEY",
                 "PRIVATE KEY",
@@ -92,15 +85,14 @@
                 "weave-scope-app",
                 "kubernetes-dashboard"
             ],
-            "untrustedRegistriesAllowlist": [],
             "untrustedRegistries": [],
-            "memory_request_max": [],
-            "memory_request_min": [],
-            "memory_limit_max": [],
+            "memory_request_max": [],            
+            "memory_request_min": [],            
+            "memory_limit_max": ["2Mi"],
             "memory_limit_min": [],
-            "cpu_request_max": [],
+            "cpu_request_max": ["500m"],
             "cpu_request_min": [],
-            "cpu_limit_max": [],
+            "cpu_limit_max": ["500m"],
             "cpu_limit_min": [],
             "wlKnownNames": [
                 "coredns",
