--- a/controls/examples/c015.yaml
+++ b/controls/examples/c015.yaml
@@ -4,6 +4,6 @@ metadata:
   namespace: default
   name: pod-exec
 rules:
-- apiGroups: [""]
+- apiGroups: ["*"]
   resources: ["secrets"] # we look for this resource or *
   verbs: ["get","list","watch"]	   # we look for this verb or * 	
