--- a/default-config-inputs.json
+++ b/default-config-inputs.json
@@ -53,6 +53,7 @@
             ],
             "max_critical_vulnerabilities": ["5"],
             "max_high_vulnerabilities": ["10"],
+            "sensitiveValuesAllowed":[],
             "sensitiveKeyNames": [
                 "aws_access_key_id",
                 "aws_secret_access_key",
