--- a/rules-tests/pods-in-default-namespace/cronjob/input/cronjob.yaml
+++ b/rules-tests/pods-in-default-namespace/cronjob/input/cronjob.yaml
@@ -2,6 +2,7 @@ apiVersion: batch/v1beta1
 kind: CronJob
 metadata:
   name: hello
+  namespace: default
 spec:
   schedule: "*/1 * * * *"
   jobTemplate:
